# lamager

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/ldap/: mod.rs
src/models/: api_message.rs  login.rs  mod.rs  new_password.rs  new_user.rs  person.rs  prelude.rs  session.rs  user.rs
src/routes/: index.rs  login.rs  logout.rs  mod.rs  profile.rs  recover.rs  register.rs
templates/: index.html.hbs  login.html.hbs  profile.html.hbs  recover.html.hbs  register.html.hbs
