[package]
name = "lamager"
version = "0.1.1"
authors = ["Varphone Wong <varphone@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
chrono = "0.4"
image = "0.23"
ldap3 = "0.9"
maplit = "1.0"
rand = "0"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["handlebars_templates", "tera_templates"] }
rocket-multipart-form-data = "0.9"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
